--- a/src/docs/docco.css
+++ b/src/docs/docco.css
@@ -34,8 +34,8 @@
 html { height: 100%; }
 body {
   font-family: "aller-light";
-  font-size: 12px;
-  line-height: 15px;
+  font-size: 14px;
+  line-height: 18px;
   color: #30404f;
   margin: 0; padding: 0;
   height:100%;
@@ -52,16 +52,15 @@ b, strong {
 }
 
 p {
-  text-align: right;
   margin: 15px 0 0px;
 }
   .annotation ul, .annotation ol {
     margin: 25px 0;
   }
     .annotation ul li, .annotation ol li {
-      font-size: 12px;
-      line-height: 15px;
-      margin: 11px 0;
+      font-size: 14px;
+      line-height: 18px;
+      margin: 10px 0;
     }
 
 h1, h2, h3, h4, h5, h6 {
@@ -69,12 +68,12 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 1em;
   font-weight: normal;
   font-family: "roboto-black";
-  xtext-transform: uppercase;
-  xmargin: 5px 0 15px 0;
+  text-transform: uppercase;
+  margin: 30px 0 15px 0;
 }
 
 h1 {
-  margin-top: 10px;
+  margin-top: 40px;
 }
 h2 {
   font-size: 1.26em;
@@ -84,22 +83,22 @@ hr {
   border: 0;
   background: 1px #ddd;
   height: 1px;
-  margin: 10px 0;
+  margin: 20px 0;
 }
 
 pre, tt, code {
-  font-size: 12px; line-height: 15px;
+  font-size: 12px; line-height: 16px;
   font-family: Menlo, Monaco, Consolas, "Lucida Console", monospace;
   margin: 0; padding: 0;
 }
   .annotation pre {
     display: block;
     margin: 0;
-    padding: 7px 11px;
+    padding: 7px 10px;
     background: #fcfcfc;
-    -moz-box-shadow:    inset 0 0 11px rgba(0,0,0,0.1);
-    -webkit-box-shadow: inset 0 0 11px rgba(0,0,0,0.1);
-    box-shadow:         inset 0 0 11px rgba(0,0,0,0.1);
+    -moz-box-shadow:    inset 0 0 10px rgba(0,0,0,0.1);
+    -webkit-box-shadow: inset 0 0 10px rgba(0,0,0,0.1);
+    box-shadow:         inset 0 0 10px rgba(0,0,0,0.1);
     overflow-x: auto;
   }
     .annotation pre code {
@@ -116,9 +115,9 @@ blockquote {
 }
   .sections blockquote p {
     font-family: Menlo, Consolas, Monaco, monospace;
-    font-size: 12px; line-height: 15px;
+    font-size: 12px; line-height: 16px;
     color: #999;
-    margin: 11px 0 0;
+    margin: 10px 0 0;
     white-space: pre-wrap;
   }
 
@@ -171,7 +170,7 @@ ul.sections > li > div {
 #jump_to, #jump_wrapper {
   position: fixed;
   right: 0; top: 0;
-  padding: 11px 15px;
+  padding: 10px 15px;
   margin:0;
 }
 
@@ -218,7 +217,7 @@ ul.sections > li > div {
 
   ul.sections > li > div {
     display: block;
-    padding:5px 11px 0 11px;
+    padding:5px 10px 0 10px;
   }
 
   ul.sections > li > div.annotation ul, ul.sections > li > div.annotation ol {
@@ -230,7 +229,7 @@ ul.sections > li > div {
     -webkit-box-shadow: inset 0 0 5px #e5e5ee;
     box-shadow: inset 0 0 5px #e5e5ee;
     border: 1px solid #dedede;
-    margin:5px 11px 5px 11px;
+    margin:5px 10px 5px 10px;
     padding-bottom: 5px;
   }
 
@@ -266,17 +265,17 @@ ul.sections > li > div {
 
 
   #jump_to {
-    padding: 5px 11px;
+    padding: 5px 10px;
   }
   #jump_wrapper {
     padding: 0;
   }
   #jump_to, #jump_page {
-    font: 11px Arial;
+    font: 10px Arial;
     text-transform: uppercase;
   }
   #jump_page .source {
-    padding: 5px 11px;
+    padding: 5px 10px;
   }
   #jump_to a.large {
     display: inline-block;
@@ -362,8 +361,8 @@ ul.sections > li > div {
 @media only screen and (min-width: 1025px) {
 
   body {
-    font-size: 13px;
-    line-height: 20px;
+    font-size: 16px;
+    line-height: 24px;
   }
 
   #background {
@@ -372,7 +371,7 @@ ul.sections > li > div {
   ul.sections > li > div.annotation {
     max-width: 525px;
     min-width: 525px;
-    padding: 11px 25px 1px 50px;
+    padding: 10px 25px 1px 50px;
   }
   ul.sections > li > div.content {
     padding: 9px 15px 16px 25px;
@@ -381,7 +380,7 @@ ul.sections > li > div {
 
 /*---------------------- Syntax Highlighting -----------------------------*/
 
-td.linenos { background-color: #f0f0f0; padding-right: 11px; }
+td.linenos { background-color: #f0f0f0; padding-right: 10px; }
 span.lineno { background-color: #f0f0f0; padding: 0 5px 0 5px; }
 /*
 
@@ -517,4 +516,3 @@ pre .hljs-chunk {
 pre .hljs-tex .hljs-formula {
   opacity: 0.5;
 }
-tr,p { line-height: 14px; }
